# AzorFramework

./: CMakeLists.txt  Hello.txt  README.md
include/azor/: audio.h  camera2d.h  character.h  constants.h  font.h  game.h  game_object.h  input.h  particle_system.h  rectangle.h  renderer.h  shader.h  texture.h  timer.h
include/glad/: glad.h
lib/: freetype.lib  glfw3.lib
lib/Debug/: glad.lib
shaders/: font-shader.frag  font-shader.vert  particle-shader.frag  particle-shader.vert  sprite-shader.frag  sprite-shader.vert
src/: azor_game.cc  azor_game.h  program.cc
